# libjnivm

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/: jni.h  jnivm.h
include/baron/: baron.h
include/fake-jni/: fake-jni.h  libraryoptions.h
include/jnivm/: array.h  arrayBase.h  class.h  env.h  extends.h  field.h  function.h  hookManager.h  javatypes.h  jnitypes.h  libraryoptions.h  method.h  methodhandlebase.h  object.h  string.h  throwable.h  vm.h  weak.h  wrap.h
include/jnivm/internal/: findclass.h  scopedVaList.h
include/jnivm/internal/codegen/: namespace.h
src/: jnivm.cpp
src/baron/: Jvm.cpp  baron.cpp  jvm.cpp
src/examples/: CMakeLists.txt
src/examples/fake-jni/: CMakeLists.txt  main.cpp
src/examples/fake-jni-cxx14/: CMakeLists.txt  main.cpp
src/examples/jnivm/: CMakeLists.txt  main.cpp
src/fake-jni/: fake-jni.cpp  jvm.cpp  method.cpp
src/jnivm/: env.cpp  method.cpp  object.cpp  vm.cpp
src/jnivm/internal/: array.cpp  array.hpp  bytebuffer.cpp  bytebuffer.hpp  field.cpp  field.hpp  findclass.cpp  jValuesfromValist.cpp  log.h  method.cpp  method.h  scopedVaList.cpp  skipJNIType.cpp  string.cpp  string.hpp  stringUtil.cpp  vm.hpp
src/jnivm/internal/codegen/: class.cpp  field.cpp  method.cpp  namespace.cpp  parseJNIType.cpp  vm.cpp
src/tests/: CodeGen.cpp  Tests.cpp  fake-jni.cpp
